RESOLVED FIXED185343
CSS filters which reference SVG filters fail to respect the "color-interpolation-filters" of the filter
https://bugs.webkit.org/show_bug.cgi?id=185343
Summary CSS filters which reference SVG filters fail to respect the "color-interpolat...
Simon Fraser (smfr)
Reported 2018-05-04 21:15:48 PDT
A CSS filter that references a filter defined in SVG, like "filter: url(#foopy);" always uses sRGB interpolation. It should use linearRGB if the SVG does not explicitly choose sRGB. This is what other browsers do.
Attachments
Test case (2.10 KB, text/html)
2018-05-04 21:16 PDT, Simon Fraser (smfr)
no flags
Patch (7.59 KB, patch)
2018-05-07 14:57 PDT, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2018-05-04 21:16:16 PDT
Created attachment 339633 [details] Test case
Simon Fraser (smfr)
Comment 2 2018-05-07 14:57:20 PDT
Simon Fraser (smfr)
Comment 3 2018-05-07 18:35:23 PDT
Radar WebKit Bug Importer
Comment 4 2018-05-07 18:36:36 PDT
Note You need to log in before you can comment on or make changes to this bug.