CSS filters which reference SVG filters fail to respect the "color-interpolation-filters" of the filter https://bugs.webkit.org/show_bug.cgi?id=185343

Reviewed by Dean Jackson.

Source/WebCore:

Test: css3/filters/color-interpolation-filters.html

When applying CSS reference filters, apply the value of "color-interpolation-filters" for the
referenced filter effect element, just as we do for SVG filters.

* rendering/FilterEffectRenderer.cpp:
(WebCore::FilterEffectRenderer::buildReferenceFilter):

LayoutTests:

* css3/filters/color-interpolation-filters-expected.html: Added.
* css3/filters/color-interpolation-filters.html: Added.

Canonical link: https://commits.webkit.org/200874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231473 268f45cc-cd09-0410-ab3c-d52691b4dbfc