Source/WebCore/rendering/FilterEffectRenderer.cpp
@@ -117,6 +117,9 @@ RefPtr<FilterEffect> FilterEffectRenderer::buildReferenceFilter(RenderElement& r
             continue;
 
         effectElement.setStandardAttributes(effect.get());
+        if (effectElement.renderer())
+            effect->setOperatingColorSpace(effectElement.renderer()->style().svgStyle().colorInterpolationFilters() == CI_LINEARRGB ? ColorSpaceLinearRGB : ColorSpaceSRGB);
+
         builder->add(effectElement.result(), effect);
         m_effects.append(*effect);
     }
